文件限制，安全模式提示